# test_tech_servier_part_2

./: README.md  pyproject.toml
.github/workflows/: 01-continuous-integration.yml
dbt/: .user.yml  dbt_project.yml  mydbt.db  profiles.yml  result_check.py
dbt/models/marts/: client_product_ventes.sql  product_ventes.sql  schema.yml
dbt/models/staging/: source.yml  stg_product_nomenclature.sql  stg_transactions.sql
dbt/seeds/: product_nomenclature.csv  transactions.csv
